--- a/literalura/src/main/resources/application.properties
+++ b/literalura/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=literalura
+spring.datasource.url=jdbc:postgresql://${DB_HOST}/${DB_BOOKS}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+
